# t2

./: .gitignore  Cargo.toml  README.md
src/: executor.rs  filter.rs  main.rs  scanner.rs  ui.rs  watcher.rs
tests/: integration_tests.rs
